# google-adk-basics

./: README.md
email-refiner-agent/: api_mode.ipynb  code_mode.ipynb  deploy.py  pyproject.toml  remote.py  session.db
email-refiner-agent/email_refiner/: agent.py
email-refiner-agent/travel_advisor_agent/: TravelEval.evalset.json
email-refiner-agent/travel_advisor_agent/.adk/: session.db
email-refiner-agent/travel_advisor_agent/.adk/eval_history/: travel_advisor_agent_TravelEval_1765506128.8845818.evalset_result.json
financial-analyst/: .gitignore
financial-analyst/financial_advisor/: agent.py
youtube-shorts-maker/youtube_shorts_maker/: agent.py
youtube-shorts-maker/youtube_shorts_maker/sub_agents/asset_generator/image_generator/image_builder/: tools.py
youtube-shorts-maker/youtube_shorts_maker/sub_agents/asset_generator/voice_generator/: tools.py
youtube-shorts-maker/youtube_shorts_maker/sub_agents/content_planner/: agent.py
